# jaba

./: .gitignore  .travis.yml  Cargo.toml
ci/: start_services
ci/scripts/: common.bash
ci/template/: gitlab-ci-multi-runner.yml.in  gitlab.yml.in  update_gitlab  update_gitlab-ci-multi-runnner
etc/: cfg.sample.toml
img/: Makefile  state_transition.dot
src/: build_state.rs  config.rs  errors.rs  gitlab_ext.rs  main.rs  merge_request.rs  project.rs
