[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
name = "jaba"
description = "JABA; Just Another Build Automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gifnksm/jaba"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
clap = "2.20.0"
error-chain = "0.7.1"
log = "0.3.6"
matches = "0.1.4"
quick-error = "1.1.0"
serde = "0.8.19"
serde_derive = "0.8.19"
serde_json = "0.8.4"
slog = "1.3.2"
slog-envlogger = "0.5.0"
slog-stdlog = "1.1.0"
slog-term = "1.3.4"

[dependencies.clippy]
optional = true
version = "0.0.106"

[dependencies.git2]
default-features = false
features = ["ssh"]
version = "0.6.3"

[dependencies.gitlab]
git = "https://gitlab.kitware.com/utils/rust-gitlab"

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.2.1"

[features]
default = ["clippy"]

[profile]

[profile.release]
lto = true
